updates for commons-cli and commons-exec and polish up code